@@ -20,7 +20,17 @@
 
 # --- Python standard library ---
 from __future__ import unicode_literals
-import sys, os, shutil, time, random, hashlib, urlparse, re, string, fnmatch
+import sys
+import os
+import shutil
+import time
+import random
+import hashlib
+import urlparse
+import re
+import string
+import fnmatch
+import HTMLParser
 
 # --- Kodi modules ---
 # >> FileName class uses xbmc.translatePath()
@@ -121,12 +131,11 @@ def text_unescape_XML(data_str):
     return data_str
 
 #
+# Unquote an HTML string. Replaces %xx with Unicode characters.
 # http://www.w3schools.com/tags/ref_urlencode.asp
 #
 def text_decode_HTML(s):
-    # >> Must be done first
-    s = s.replace('%25', '%')
-    
+    s = s.replace('%25', '%') # >> Must be done first
     s = s.replace('%20', ' ')
     s = s.replace('%23', '#')
     s = s.replace('%26', '&')
@@ -141,37 +150,53 @@ def text_decode_HTML(s):
 
     return s
 
+#
+# Decodes HTML <br> tags and HTML entities (&xxx;) into Unicode characters.
+# See https://stackoverflow.com/questions/2087370/decode-html-entities-in-python-string
+#
 def text_unescape_HTML(s):
-    # >> Replace single HTML characters by their Unicode equivalent
+    __debug_text_unescape_HTML = True
+    if __debug_text_unescape_HTML:
+        log_debug('text_unescape_HTML() input  "{0}"'.format(s))
+
+    # --- Replace HTML tag characters by their Unicode equivalent ---
     s = s.replace('<br>',   '\n')
     s = s.replace('<br/>',  '\n')
     s = s.replace('<br />', '\n')
-    s = s.replace('&lt;',   '<')
-    s = s.replace('&gt;',   '>')
-    s = s.replace('&quot;', '"')
-    s = s.replace('&nbsp;', ' ')
-    s = s.replace('&copy;', '©')
-    s = s.replace('&amp;',  '&') # >> Must be done last
 
-    # >> Complex HTML entities. Single HTML chars must be already replaced.
-    s = s.replace('&#039;', "'")
-    s = s.replace('&#149;', "•")
-    s = s.replace('&#x22;', '"')
-    s = s.replace('&#x26;', '&')
-    s = s.replace('&#x27;', "'")
+    # --- HTML entities ---
+    # s = s.replace('&lt;',   '<')
+    # s = s.replace('&gt;',   '>')
+    # s = s.replace('&quot;', '"')
+    # s = s.replace('&nbsp;', ' ')
+    # s = s.replace('&copy;', '©')
+    # s = s.replace('&amp;',  '&') # >> Must be done last
 
-    s = s.replace('&#x101;', "ā")
-    s = s.replace('&#x113;', "ē")
-    s = s.replace('&#x12b;', "ī")
-    s = s.replace('&#x12B;', "ī")
-    s = s.replace('&#x14d;', "ō")
-    s = s.replace('&#x14D;', "ō")
-    s = s.replace('&#x16b;', "ū")
-    s = s.replace('&#x16B;', "ū")
-    
+    # --- HTML Unicode entities ---
+    # s = s.replace('&#039;', "'")
+    # s = s.replace('&#149;', "•")
+    # s = s.replace('&#x22;', '"')
+    # s = s.replace('&#x26;', '&')
+    # s = s.replace('&#x27;', "'")
+
+    # s = s.replace('&#x101;', "ā")
+    # s = s.replace('&#x113;', "ē")
+    # s = s.replace('&#x12b;', "ī")
+    # s = s.replace('&#x12B;', "ī")
+    # s = s.replace('&#x14d;', "ō")
+    # s = s.replace('&#x14D;', "ō")
+    # s = s.replace('&#x16b;', "ū")
+    # s = s.replace('&#x16B;', "ū")
+
+    # >> Use HTMLParser module to decode HTML entities.
+    s = HTMLParser.HTMLParser().unescape(s)
+
+    if __debug_text_unescape_HTML:
+        log_debug('text_unescape_HTML() output "{0}"'.format(s))
+
     return s
 
-#    
+#
 # Remove HTML tags
 #
 def text_remove_HTML_tags(s):
