@@ -77,6 +77,8 @@ WIP      Option to rescrape all assets from launcher in a similar fashion to "Sc
 
 FIX      Fix crash in _gui_scrap_launcher_metadata() when scraping Launcher metadata.
 
+FIX      Fix metadata and artwork scrapers when ROM name has Unicode characters.
+         See Github issue #52
 
 [B]Advanced Emulator Launcher | version 0.9.7 | 23 November 2017[/B]
 
